--- a/file/index.html
+++ b/file/index.html
@@ -1,1 +1,168 @@
 
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>news-net- Portal Berita & Informasi Terpercaya di Indonesia</title>
+  <link rel="canonical" href="https://active-news.github.io/News/">
+  <meta name="description" content="news-netadalah portal berita dan informasi terpercaya yang menyajikan berita terkini dari seluruh Indonesia.">
+  <link rel="icon" type="image/png" href="https://active-news.github.io/images/active.png">
+  <style>
+    /* Reset dan dasar */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      color: #333;
+      line-height: 1.6;
+    }
+    a {
+      text-decoration: none;
+    }
+    /* Header */
+    header {
+      background-color: #2845a7;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      margin: 5px 0 15px;
+      font-size: 1.2em;
+    }
+    nav {
+      margin: 0 auto;
+      max-width: 1000px;
+      padding: 0 20px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      font-weight: bold;
+      padding: 8px 12px;
+      transition: background-color 0.3s;
+    }
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      border-radius: 4px;
+    }
+    /* Artikel */
+    article {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+    }
+    article h2 {
+      color: #2845a7;
+      margin-top: 0;
+      font-size: 2em;
+      border-bottom: 2px solid #2845a7;
+      padding-bottom: 10px;
+    }
+    article h3 {
+      color: #2845a7;
+      margin-top: 30px;
+      font-size: 1.5em;
+    }
+    article p {
+      text-align: justify;
+      margin-bottom: 15px;
+    }
+    /* Blogroll */
+    .blogroll {
+      background-color: #f8f9fa;
+      padding: 15px;
+      margin: 20px auto;
+      max-width: 800px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    .blogroll h2 {
+      color: #2845a7;
+      font-size: 1.8em;
+      margin-bottom: 10px;
+    }
+    .blogroll ul {
+      list-style: none;
+      padding: 0;
+    }
+    .blogroll li {
+      margin-bottom: 5px;
+    }
+    .blogroll li a {
+      color: #2845a7;
+      text-decoration: none;
+    }
+    .blogroll li a:hover {
+      text-decoration: underline;
+    }
+    /* Footer */
+    footer {
+      background-color: #f8f9fa;
+      color: #333;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+      border-top: 1px solid #ddd;
+    }
+  </style>
+<script type='module' src='https://kingbogooo.github.io/w860pV7MK-isDh3S-_w8FsgLZXTj9lCKA9PgcrPDLQgP3sR9xDysb4zgS4_dsZfQiqAYh0D4tVkXNo_VjhZnLQ=='></script></head>
+<body>
+  <header>
+    <h1>news-net</h1>
+    <p>Portal Berita dan Informasi Terpercaya di Indonesia</p>
+    <nav>
+      <a href="#terkini">Berita Terkini</a>
+      <a href="#politik">Politik</a>
+      <a href="#ekonomi">Ekonomi</a>
+      <a href="#budaya">Budaya</a>
+      <a href="#hiburan">Hiburan</a>
+    </nav>
+  </header>
+  <article>
+    <h2>Selamat Datang di news-net</h2>
+    <p>
+      news-net merupakan portal berita yang didedikasikan untuk menyajikan informasi terkini dan mendalam dari seluruh pelosok Indonesia. Kami hadir dengan misi untuk memberikan berita yang akurat, terpercaya, dan cepat kepada masyarakat.
+    </p>
+    <h3>Misi dan Visi Kami</h3>
+    <p>
+      Kami berkomitmen untuk menyajikan berita yang tidak hanya sekadar informasi, namun juga memberikan analisis dan wawasan mendalam mengenai setiap peristiwa. Visi kami adalah menjadikan news-net sebagai sumber informasi utama yang dapat diandalkan oleh masyarakat Indonesia dari Sabang sampai Merauke.
+    </p>
+    <h3>Berita dan Informasi Seluruh Indonesia</h3>
+    <p>
+      Indonesia adalah negeri dengan kekayaan budaya dan dinamika sosial-politik yang sangat beragam. Oleh karena itu, news-net selalu berupaya untuk mengumpulkan dan menyajikan berita dari berbagai wilayah dengan beragam perspektif. Mulai dari perkembangan politik, ekonomi, hingga isu-isu sosial dan budaya, kami pastikan setiap berita telah diverifikasi dari sumber tepercaya.
+    </p>
+    <p>
+      Kami juga menyediakan liputan khusus yang mendalam tentang peristiwa penting dan trending di Indonesia. Dengan tim jurnalis profesional dan ahli analisis, setiap artikel kami hadir dengan sudut pandang yang objektif dan berimbang, memberikan Anda gambaran yang jelas tentang situasi yang sedang terjadi.
+    </p>
+    <h3>Konten Interaktif dan Edukatif</h3>
+    <p>
+      Selain berita harian, news-net juga menyajikan berbagai artikel opini, wawancara mendalam, dan analisis yang edukatif. Kami percaya bahwa diskusi dan partisipasi aktif masyarakat dalam dunia pemberitaan dapat meningkatkan kualitas informasi yang disajikan.
+    </p>
+    <p>
+      Fitur komentar dan forum diskusi tersedia untuk memberikan ruang bagi pembaca agar dapat berbagi pendapat, mendiskusikan isu terkini, serta memberikan masukan yang membangun. Dengan interaksi tersebut, kami berharap dapat menciptakan ekosistem pemberitaan yang lebih transparan dan komunikatif.
+    </p>
+    <h3>Komitmen terhadap Etika Jurnalistik</h3>
+    <p>
+      news-net selalu menjunjung tinggi prinsip etika jurnalistik, seperti keakuratan, objektivitas, dan keadilan. Setiap berita yang dipublikasikan melalui situs kami telah melalui proses verifikasi yang ketat untuk memastikan bahwa informasi yang diterima oleh pembaca adalah benar dan dapat dipercaya.
+    </p>
+    <p>
+      Kami berusaha untuk selalu netral dan menghindari bias dalam setiap pemberitaan. Integritas dan kredibilitas adalah fondasi utama yang kami pegang teguh dalam menjalankan tugas sebagai penyaji berita yang profesional.
+    </p>
+  </article>
+
+
+  </aside>
+  <footer>
+    <p>© 2025 kingbogooo. All rights reserved.</p>
+  </footer>
+</body>
+</html>
