--- a/file/index.html
+++ b/file/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>news-net- Portal Berita & Informasi Terpercaya di Indonesia</title>
-  <link rel="canonical" href="https://active-news.github.io/News/">
+  <link rel="canonical" href="https://sumber-id.github.io/news-net/file/">
   <meta name="description" content="news-netadalah portal berita dan informasi terpercaya yang menyajikan berita terkini dari seluruh Indonesia.">
   <link rel="icon" type="image/png" href="https://active-news.github.io/images/active.png">
   <style>
