--- a/file/index.html
+++ b/file/index.html
@@ -162,7 +162,7 @@
 
   </aside>
   <footer>
-    <p>© 2025 kingbogooo. All rights reserved.</p>
+    <p>© 2025 News-net. All rights reserved.</p>
   </footer>
 </body>
 </html>
